--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "rm -rf ./dist/*",
-    "compile": "tsc server.ts --outDir dist",
+    "compile": "tsc src/server.ts --outDir dist",
     "start": "node dist/server.js",
     "debug": "npm run clean && npm run compile && npm run start --",
     "deploy": "npm run clean && npm run compile && ssh -t pi 'rm -rf /home/pi/jsrelay_client/*' && scp -r dist/* pi:/home/pi/jsrelay_client && scp -r node_modules pi:/home/pi/jsrelay_client"
@@ -18,6 +18,7 @@
     "@types/socket.io-client": "^1.4.32",
     "argparse": "^1.0.10",
     "child_process": "^1.0.2",
+    "onoff": "^5.0.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "stream-split": "^1.1.0"
