--- a/server/webclient/package.json
+++ b/server/webclient/package.json
@@ -20,13 +20,13 @@
     "ts-loader": "^6.2.1",
     "ts-node": "^8.5.0",
     "typescript": "^3.7.2",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack": "^4.41.2"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^1.0.0"
+    "style-loader": "^1.0.0",
+    "webpack-cli": "^3.3.10"
   }
 }
