--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/argparse": "^1.0.36",
+    "@types/pigpio": "^1.2.1",
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
     "argparse": "^1.0.10",
     "child_process": "^1.0.2",
     "onoff": "^5.0.0",
+    "pigpio": "^2.0.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "stream-split": "^1.1.0"
