--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "compile": "tsc src/server.ts --outDir dist",
     "start": "node dist/server.js",
     "debug": "npm run clean && npm run compile && npm run start --",
-    "deploy": "npm run clean && npm run compile && ssh -t pi 'rm -rf /home/pi/jsrelay_client/*' && scp -r dist/* pi:/home/pi/jsrelay_client && scp -r node_modules pi:/home/pi/jsrelay_client"
+    "deploy": "npm run clean && npm run compile && ssh -t pi 'rm -rf /home/pi/jsrelay_client/dist' && scp -r ./dist pi:/home/pi/jsrelay_client && scp -r ./*.json pi:/home/pi/jsrelay_client"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "child_process": "^1.0.2",
     "onoff": "^5.0.0",
     "pigpio": "^2.0.1",
+    "pigpio-l298n": "0.0.3",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "stream-split": "^1.1.0"
