--- a/server/webclient/package.json
+++ b/server/webclient/package.json
@@ -14,6 +14,7 @@
     "@types/socket.io": "^2.1.4",
     "@types/socket.io-client": "^1.4.32",
     "@types/webpack": "^4.39.8",
+    "nipplejs": "^0.8.4",
     "path": "^0.12.7",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
