--- a/server/webclient/package.json
+++ b/server/webclient/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^12.12.7",
-    "@types/socket.io": "^2.1.4",
-    "@types/socket.io-client": "^1.4.32",
-    "@types/webpack": "^4.39.8",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
+    "babel-loader": "^8.0.6",
     "nipplejs": "^0.8.4",
     "path": "^0.12.7",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "ts-loader": "^6.2.1",
@@ -29,5 +31,11 @@
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^1.0.0",
     "webpack-cli": "^3.3.10"
+  },
+  "babel": {
+    "presets": [
+      "@babel/env",
+      "@babel/react"
+    ]
   }
 }
