--- a/server/webclient/package.json
+++ b/server/webclient/package.json
@@ -1,41 +1,35 @@
 {
   "name": "robomboozle-webclient",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.ts",
-  "scripts": {
-    "build": "webpack",
-    "watch": "webpack --watch"
-  },
-  "author": "",
-  "license": "ISC",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
-    "babel-loader": "^8.0.6",
-    "nipplejs": "^0.8.4",
-    "path": "^0.12.7",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^7.2.1",
+    "bulma": "^0.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.5.0",
-    "typescript": "^3.7.2",
-    "webpack": "^4.41.2"
+    "react-scripts": "3.3.0"
   },
-  "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^1.0.0",
-    "webpack-cli": "^3.3.10"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "babel": {
-    "presets": [
-      "@babel/env",
-      "@babel/react"
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   }
 }
