--- a/server/webclient/package.json
+++ b/server/webclient/package.json
@@ -6,10 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/socket.io-client": "^1.4.32",
     "bulma": "^0.8.0",
+    "mobx": "^5.15.1",
+    "mobx-react": "^6.1.4",
+    "nipplejs": "^0.8.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "socket.io-client": "^2.3.0",
+    "typescript": "^3.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
