--- a/server/webclient/package.json
+++ b/server/webclient/package.json
@@ -3,17 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.8.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/socket.io-client": "^1.4.32",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "bulma": "^0.8.0",
-    "mobx": "^5.15.1",
-    "mobx-react": "^6.1.4",
     "nipplejs": "^0.8.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0",
+    "react-redux": "^7.1.3",
+    "react-scripts": "^3.3.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "typescript": "^3.7.4"
   },
