--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
     docker:
       - image: circleci/buildpack-deps:stretch
     steps:
-      - run: ssh -o "StrictHostKeyChecking=no" $REMOTE_USERNAME@$REMOTE_HOST "sudo docker service update ${SERVICE_NAME}"
+      - run: ssh -o "StrictHostKeyChecking=no" $REMOTE_USERNAME@$REMOTE_HOST "sudo docker service update --force ${SERVICE_NAME}"
 
 workflows:
   version: 2
