WIP: typescript needed

--- a/server/server/package.json
+++ b/server/server/package.json
@@ -20,6 +20,7 @@
     "argparse": "^1.0.10",
     "express": "^4.17.1",
     "socket.io": "^2.3.0",
-    "stream-split": "^1.1.0"
+    "stream-split": "^1.1.0",
+    "typescript": "^3.7.5"
   }
 }
