--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,8 +54,9 @@ jobs:
     docker:
       - image: circleci/buildpack-deps:stretch
     steps:
-      - run: ssh -o "StrictHostKeyChecking=no" $REMOTE_USERNAME@$REMOTE_HOST "sudo docker rmi $(docker image ls | grep nikitades/robomboozle-server:*) && sudo docker service update --image $DOCKERHUB_USERNAME/$DOCKER_IMAGE_NAME:$CIRCLE_BRANCH-$CIRCLE_SHA1 ${SERVICE_NAME}"
-
+      - run: /
+          ssh -o "StrictHostKeyChecking=no" $REMOTE_USERNAME@$REMOTE_HOST "sudo docker rmi $(docker image ls | grep nikitades/robomboozle-server:*)"
+          ssh -o "StrictHostKeyChecking=no" $REMOTE_USERNAME@$REMOTE_HOST "sudo docker service update --image $DOCKERHUB_USERNAME/$DOCKER_IMAGE_NAME:$CIRCLE_BRANCH-$CIRCLE_SHA1 ${SERVICE_NAME}"
 workflows:
   version: 2
   build_and_deploy:
