--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,10 +57,9 @@ jobs:
       - attach_workspace:
           at: .
       - run: |
-          scp -o "StrictHostKeyChecking=no" ./server/restartServer.sh $REMOTE_USERNAME@$REMOTE_HOST:~/
-          ssh -o "StrictHostKeyChecking=no" $REMOTE_USERNAME@$REMOTE_HOST 'DOCKERHUB_USERNAME="$DOCKERHUB_USERNAME" DOCKER_IMAGE_NAME="$DOCKER_IMAGE_NAME" CIRCLE_BRANCH="$CIRCLE_BRANCH" CIRCLE_SHA1="$CIRCLE_SHA1" SERVICE_NAME="$SERVICE_NAME" sh ~/restartServer.sh'
-        # ssh -o "StrictHostKeyChecking=no" $REMOTE_USERNAME@$REMOTE_HOST "sudo docker rmi \\$(docker image ls | grep nikitades/robomboozle-server:*)"
-        # ssh -o "StrictHostKeyChecking=no" $REMOTE_USERNAME@$REMOTE_HOST "sudo docker service update --image $DOCKERHUB_USERNAME/$DOCKER_IMAGE_NAME:$CIRCLE_BRANCH-$CIRCLE_SHA1 ${SERVICE_NAME}"
+          ssh -o "StrictHostKeyChecking=no" $REMOTE_USERNAME@$REMOTE_HOST '$(docker images | grep "$DOCKERHUB_USERNAME"/"$DOCKER_IMAGE_NAME" | awk '{print $1":"$2}')'
+          ssh -o "StrictHostKeyChecking=no" $REMOTE_USERNAME@$REMOTE_HOST 'docker rmi $(docker images | grep "$DOCKERHUB_USERNAME"/"$DOCKER_IMAGE_NAME" | awk '{print $1":"$2}')'
+          ssh -o "StrictHostKeyChecking=no" $REMOTE_USERNAME@$REMOTE_HOST 'docker service update --image "$DOCKERHUB_USERNAME"/"$DOCKER_IMAGE_NAME":"$CIRCLE_BRANCH"-"$CIRCLE_SHA1" "$SERVICE_NAME"'
 workflows:
   version: 2
   build_and_deploy:
