Fix: we should update the service before we clean the images

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,8 +59,8 @@ jobs:
       - run: |
           ssh -o "StrictHostKeyChecking=no" $REMOTE_USERNAME@$REMOTE_HOST "docker images | grep $DOCKERHUB_USERNAME/$DOCKER_IMAGE_NAME" >> images.txt
           cat images.txt | awk '{print $3}' >> filtered_images.txt
-          ssh -o "StrictHostKeyChecking=no" $REMOTE_USERNAME@$REMOTE_HOST "docker rmi $(cat filtered_images.txt)"
           ssh -o "StrictHostKeyChecking=no" $REMOTE_USERNAME@$REMOTE_HOST "docker service update --image $DOCKERHUB_USERNAME/$DOCKER_IMAGE_NAME:$CIRCLE_BRANCH-$CIRCLE_SHA1 $SERVICE_NAME"
+          ssh -o "StrictHostKeyChecking=no" $REMOTE_USERNAME@$REMOTE_HOST "docker rmi $(cat filtered_images.txt)" || true
 workflows:
   version: 2
   build_and_deploy:
